--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0",
     "name": "Leads tracker",
     "action": {
-        "default_popup": "images/index.html",
+        "default_popup": "/index.html",
         "default_icon": "icon.png"
     }
 }
